--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html {
     background-color: white;
     color: black;
+    min-height: 100%;
 }
 #body {
     background-color:red;
@@ -8,11 +9,21 @@ html {
 header{
     text-align: center;
 }
+footer{
+    position: absolute;
+    bottom: 0;
+    left: calc(50% - 100px);
+    text-align: center;
+    margin-bottom: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: gray;
+    font-size: x-small;
+}
 #mainheader {
     color: lightblue;
     text-align: center;
 }
-#paragraphone{
+p{
     font: 12px, Arial, sans-serif;
     font-family: Arial, Helvetica, sans-serif;
     font-size: smaller;
@@ -22,6 +33,9 @@ header{
     text-align: justify;
 }
 #republiclogo{
-    position: inherit;
-    size: 100px;
+    float: right;
+    width: 100px;
+    height: 100px;
+    margin-right: 10%;
+    margin-left: 1%;
 }
