--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,15 @@ p{
     color: goldenrod;
     text-align: justify;
 }
+article{
+    font: 12px, Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: smaller;
+    margin-left: 10%;
+    margin-right: 10%;
+    color: goldenrod;
+    text-align: justify;
+}
 #republiclogo{
     float: right;
     width: 100px;
