--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,14 @@ html {
     background-color:red;
 }
 header{
+    position: absolute;
+    top: 0;
+    left: calc(50% - 100px);
     text-align: center;
+    margin-top: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: gray;
+    font-size: x-small;
 }
 footer{
     position: absolute;
@@ -20,19 +27,12 @@ footer{
     font-size: x-small;
 }
 #mainheader {
-    color: lightblue;
+    color: blue;
+    
     text-align: center;
 }
 p{
-    font: 12px, Arial, sans-serif;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: smaller;
-    margin-left: 10%;
-    margin-right: 10%;
-    color: goldenrod;
-    text-align: justify;
-}
-article{
+    text-indent: 4ch;
     font: 12px, Arial, sans-serif;
     font-family: Arial, Helvetica, sans-serif;
     font-size: smaller;
@@ -47,4 +47,10 @@ article{
     height: 100px;
     margin-right: 10%;
     margin-left: 1%;
+}
+#scrollbutton{
+    position: absolute;
+    bottom: 20px;
+    left: auto;
+    width: 50px;
 }
