--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html {
     background-color: white;
     color: black;
     min-height: 100%;
+    text-align: left;
 }
 #body {
     background-color:red;
@@ -51,6 +52,21 @@ p{
     padding-top: 5%;
     padding-bottom: 5%;
 }
+ol{
+    font: 12px, Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: normal;
+    color: goldenrod;
+    text-align: justify;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 25%;
+    margin-right: 25%;
+    border: 2px;
+    border-color: darkkhaki;
+    border-style: solid;
+    background-color: beige;
+}
 #primal-rage{
     word-wrap: normal;
     float: right;
@@ -87,4 +103,18 @@ p{
     width: 20%;
     height: 20%;
     margin: 10px;
+}
+#cataclysm{
+    float: left;
+    font-weight: bold;
+    margin-right: 1%;
+    height: 20%;
+    width: 20%;
+}
+#morrowind{
+    float: left;
+    font-weight: bold;
+    margin-right: 1%;
+    height: 20%;
+    width: 20%;
 }
